input with type number in otpbox (trying to fix bug on mobile)

--- a/src/components/common/otp-box/otp-box.css
+++ b/src/components/common/otp-box/otp-box.css
@@ -20,6 +20,16 @@
 	animation: blink 1.5s linear infinite;
 }
 
+.otpbox-input::-webkit-outer-spin-button,
+.otpbox-input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.otpbox-input[type="number"] {
+	-moz-appearance: textfield;
+}
+
 @keyframes blink {
 	50% {
 		border-color: transparent;
